bump-agent: the chain the operator specified, four producer/critic pairs in a fixed order
surveyor/survey-critic decide the hop from the build files (the deterministic detector's
guess travels as input, not law). preparer/prepare-critic execute the proactive steps,
gated on structural triggers, judged for missed triggers and overreach. bumper/bump-critic
land the effective bytecode target, judged against the pin grep that is re-run after the
edits. troubleshooter/trouble-critic clear the residue inside the bounded gate loop, with
gaming reverted, and the deterministic wall table still runs first on every turn so no
model call is spent on an enumerable wall.

The hop knowledge moved into the prompts (measured floors, wrapper table, class-file
majors); the skill document will be derived from this file and the chain's order, not the
other way round. Critics hold closed word lists; producers speak EDIT blocks that Edits
applies atomically and never to a test. One re-ask per objection, shared by every pair.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>